# CT-Explain

./: README.md  Xai_paper_v1.tex  pyproject.toml  requirements.txt  setup.py  xai_soc_eaai_v2.tex
configs/: conformal.yaml  datasets.yaml  default.yaml
ct_explain/: __init__.py  cli.py
ct_explain/api/: __init__.py  schemas.py  server.py
ct_explain/conformal/: __init__.py  calibration.py  conformal_guard.py  e_value.py  execution_graph.py  graph_conformal.py
ct_explain/evaluation/: __init__.py  conformal.py  detection.py  explanation.py  statistical.py
ct_explain/explainers/: __init__.py  attention_flow.py  base.py  calibrated.py  counterfactual.py  game_theory.py  mitre_attack.py  uncertainty_attribution.py
ct_explain/integration/: __init__.py  robustidps.py
ct_explain/models/: __init__.py  ct_tgnn.py  message_func.py  ode_func.py  sde_tgnn.py  temporal_attention.py  time_encoding.py
ct_explain/soc/: __init__.py  active_learning.py  dashboard.py  human_ai.py  siem_plugin.py
ct_explain/training/: __init__.py  adjoint.py  losses.py  trainer.py
ct_explain/utils/: __init__.py  compat.py  config.py  logging.py  seed.py
docs/: ARCHITECTURE.md  DATASETS.md  REPRODUCIBILITY.md  SOC_INTEGRATION.md
notebooks/: ct_explain_demo.ipynb
scripts/: calibrate.py  download_data.py  evaluate.py  explain.py  train.py
tests/: conftest.py  test_conformal.py  test_ct_tgnn.py  test_datasets.py  test_explainers.py  test_graph_builder.py  test_soc_and_metrics.py
